--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+---
 name: Backend Chat CI/CD
 on:
   push:
@@ -11,7 +12,6 @@ on:
       runs-on: ubuntu-latest
       container:
         image: node
-
       steps:
         - uses: actions/checkout@v1
         - name: Install & Tests
@@ -21,11 +21,11 @@ on:
     cd:
       runs-on: ubuntu-latest
       needs: ci
-
       steps:
         - uses: actions/checkout@v1
         - name: Docker login
-          run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+          run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD
+            }}
         - name: Build
           run: docker build -t back .
         - name: Tags
@@ -36,4 +36,3 @@ on:
           run: |
             docker push ${{ secrets.DOCKER_USER }}/back:${{ github.sha }}
             docker push ${{ secrets.DOCKER_USER }}/back:latest
-
